// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish should raise exception when publish fails 1`] = `
Array [
  Array [
    "Found file dist/some-package-v1.tar.gz from path dist/some-package-*.tar.gz",
  ],
  Array [
    "Found file dist/other-package-v2.tar.gz from path dist/other-package-*.tar.gz",
  ],
  Array [
    "Deploying dist/some-package-v1.tar.gz as some-package-v1.tar.gz to localhost",
  ],
  Array [
    "Deploying dist/other-package-v2.tar.gz as other-package-v2.tar.gz to localhost",
  ],
]
`;

exports[`publish should raise exception when publish fails 2`] = `
Array [
  Array [
    "I hate you",
  ],
]
`;

exports[`publish should raise exception when publish fails 3`] = `
Array [
  Array [
    "localhost",
    Object {},
  ],
]
`;

exports[`publish should successfully publish 1`] = `
Array [
  Array [
    "Found file dist/some-package-v1.tar.gz from path dist/some-package-*.tar.gz",
  ],
  Array [
    "Found file dist/other-package-v2.tar.gz from path dist/other-package-*.tar.gz",
  ],
  Array [
    "Deploying dist/some-package-v1.tar.gz as some-package-v1.tar.gz to localhost",
  ],
  Array [
    "Deploying dist/other-package-v2.tar.gz as artifact-2 to localhost",
  ],
]
`;

exports[`publish should successfully publish 2`] = `
Array [
  Array [
    "localhost",
    Object {},
  ],
]
`;

exports[`publish should successfully publish w/ auth 1`] = `
Array [
  Array [
    "Found file dist/some-package-v1.tar.gz from path dist/some-package-*.tar.gz",
  ],
  Array [
    "Found file dist/other-package-v2.tar.gz from path dist/other-package-*.tar.gz",
  ],
  Array [
    "Deploying dist/some-package-v1.tar.gz as some-package-v1.tar.gz to localhost",
  ],
  Array [
    "Deploying dist/other-package-v2.tar.gz as artifact-2 to localhost",
  ],
]
`;

exports[`publish should successfully publish w/ auth 2`] = `
Array [
  Array [
    "localhost",
    Object {
      "password": "some-password",
      "username": "some-user",
    },
  ],
]
`;
